--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,4 @@
-datasource.driverClass=org.h2.Driver
-datasource.jdbcUrl=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
-datasource.user=
-datasource.password=
+datasource.driverClass=com.mysql.jdbc.Driver
+datasource.jdbcUrl=jdbc:mysql://database:3306/accountstransfers
+datasource.user=mysql
+datasource.password=mysql
